# parsing

./: .gitignore  .gitmodules  README.md  bench_result.txt  enumExamples.hpp  generate.py  hash.py  main.py  output.h  parser.py  printer.py
bench/: CMakeLists.txt  bench_common.h  dvg.h  geo_entry.h  geo_resource_format.h  geo_resource_type.h  main.cpp  mappings.h  prev_mappings.h  read_strings.h  test_generated_mappings.h
data/: input_header.h  output.h
generation/: decision_tree.py  decode_builder.py  enum_field.py  main.py  parser.py  rules.py
prev_generation/: decision_tree.py  decode_builder.py  enum_field.py  main.py  parse_bench_results.py  printer.py  rules.py
